fixed vertical 'spill' issue for mobile devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     display: grid;
     grid-template-columns: 1fr 10fr 1fr 1fr;
-    grid-template-rows: 78px 10fr 1fr;
+    grid-template-rows: 60px 10fr 60px;
     grid-template-areas:
       ". . logo ."
       ". main-left navigation ."
